--- a/Aulas/Exercício HTML.html
+++ b/Aulas/Exercício HTML.html
@@ -5,6 +5,19 @@
         <title>Ágatha Castilho</title>
     </head>
     <body>
-        Ágatha Castilho
+        <header>
+            <h1>Ágatha Castilho</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Post</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 </html>
